--- a/index.html
+++ b/index.html
@@ -5,21 +5,31 @@
 </head>
 
 <body>
-  <input type="text" id="search" value="" />
+  <input type="text" id="search" value="" placeholder="100" />
+  <input type='button' value="test" onClick="console.log(Search.getItems())" />
   <div id="main"></div>
 </body>
 <script src="./search.js"></script>
 <script>
 
+  var template = "<div>{{title}}</div>"; // le template de que affichera à l'utilisateur (à toi de le design)
+  var templateKeys = ["title"]; // Les keys des variables que tu as dans le template (exemple {{title}})
+
   var items = [];
   for (let i = 0; i < 500; i++) {
     items.push({
-      title: "Bonjour " + i,
-      tags: [i.toString()]
+      title: 'Bonjour' + i, // La valeur que tu as définis dans ton template
+      tags: [i.toString()] // Ici tu mets les mots clefs, ici je mets un chiffre mais tu peux mettre tout et n'importe quoi
     })
   }
 
-  new Search('main', 'search', items);
+  var search = new Search(
+    document.getElementById('main'), // Je lui passe la div main
+    document.getElementById('search'), // Je lui passe l'input de recherche (celui ou on va ajouter les events)
+    items, // les items à afficher
+    { template: template, templateKeys: templateKeys }); // lancement du script
+
+  console.log(search.getItems()); // affichage de tout les items en log
 </script>
 
 </html>
